<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
    
    <include layout="@layout/commonheader"/>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:gravity="center|left">
        
         <TextView
             android:id="@+id/tvDateHeader"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
             android:layout_weight="0.25"
             android:text="@string/strToday"
             android:textColor="@color/white"
             />
         <TextView
             android:id="@+id/tvCurrDate"
             android:layout_width="0dp"
             android:layout_marginRight="5dip"
             android:layout_height="wrap_content"
             android:hint="@string/strdatehint"
             android:layout_weight="0.75"
             android:textColor="@color/white"
             />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip">
        
        <TextView
            android:id="@+id/tvLabelDoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:text="@string/strdocselect"
			android:textColor="@color/white"
			android:layout_weight="0.25"
			android:layout_marginLeft="10dip"
            />
        <Spinner
            android:id="@+id/spinDoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dip"
            android:background="@drawable/list_selector"
            android:layout_weight="0.75"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip">
         <TextView
            android:id="@+id/tvLabelPet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:text="@string/strpetselect"
			android:textColor="@color/white"
			android:layout_weight="0.25"
			android:layout_marginLeft="10dip"
			/>
         
        <Spinner
            android:id="@+id/spinPet"
            android:layout_width ="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="5dip"
            android:background="@drawable/list_selector"
            android:layout_weight="0.75"
            />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip">
         <TextView
            android:id="@+id/tvLabelVaccine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:text="@string/strshotselect"
			android:textColor="@color/white"
			android:layout_marginLeft="10dip"
        	android:layout_weight="0.25"
            />
        <Spinner
            android:id="@+id/spinVaccine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="5dip"
            android:background="@drawable/list_selector"
            android:layout_weight="0.75"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        >
         <TextView
            android:id="@+id/tvLabelSetDueDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:text="@string/strDueDate"
			android:textColor="@color/white"
			android:layout_marginLeft="10dip"
			android:layout_weight="0.25"    
            />
         <EditText
            android:id="@+id/editDueDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:textColor="@color/white"
			android:hint="@string/strduedatehint"
			android:layout_marginLeft="10dip"
			android:layout_weight="0.75"         
            />
    </LinearLayout>

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

         <Button
             android:id="@+id/btnSaveVaccineDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="@string/strSave" 
             android:textColor="@color/white"
             android:ems="5"
             />
             <Button
             android:id="@+id/btnDiscardVaccineDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="@string/strDiscard" 
             android:textColor="@color/white"
             android:ems="5"
             />
    </LinearLayout>
</LinearLayout>