<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">
    
    <include layout="@layout/commonheader"/>
    
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dip"
      android:layout_marginLeft="5dip"
      android:orientation="horizontal"
      >
        <TextView
            android:id="@+id/tvlistvaccinename"
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/strtblVaccineName"
      		android:textStyle="bold"
      		android:textAppearance="?android:attr/textAppearanceMedium"
      		android:textColor="@color/white"
      		android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvlistvisitdate"
      		android:layout_height="wrap_content"
      		android:text="@string/strtblVaccineDate"
      		android:textAppearance="?android:attr/textAppearanceMedium"
      		android:textColor="@color/white"
      		android:textStyle="bold"
      		android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/strtblVaccineDueDate"
      		android:textAppearance="?android:attr/textAppearanceMedium"
      		android:id="@+id/tvlistnextdue"
      		android:textStyle="bold"
      		android:textColor="@color/white"
      		android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/strtblDoctor"
      		android:id="@+id/tvlistdoctor"
      		android:textAppearance="?android:attr/textAppearanceMedium"
      		android:textStyle="bold"
      		android:textColor="@color/white"
      		android:layout_weight="1"
            />
    </LinearLayout>
    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"/>
    <ListView
      android:id="@id/android:list"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:divider="#b5b5b5"
      android:dividerHeight="1dp"
      android:layout_marginTop="20dip"
      android:layout_gravity="left"
      android:layout_marginLeft="5dip"
      android:layout_marginRight="5dip"
      android:scrollbars="vertical"
      android:listSelector="@color/transparent">
    </ListView>

</LinearLayout>